; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpq/extr_ntpq-opts.c_doOptRefid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpq/extr_ntpq-opts.c_doOptRefid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@doOptRefid.names = internal constant [2 x i8*] [i8* inttoptr (i64 2100 to i8*), i8* inttoptr (i64 1169 to i8*)], align 16
@OPTPROC_EMIT_LIMIT = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_6__*)* @doOptRefid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @doOptRefid(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** @OPTPROC_EMIT_LIMIT, align 8
  %7 = icmp ule i32* %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %11 = call i32 @optionEnumerationVal(i32* %9, %struct.TYPE_6__* %10, i8** getelementptr inbounds ([2 x i8*], [2 x i8*]* @doOptRefid.names, i64 0, i64 0), i32 2)
  br label %19

12:                                               ; preds = %2
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = call i32 @optionEnumerationVal(i32* %13, %struct.TYPE_6__* %14, i8** getelementptr inbounds ([2 x i8*], [2 x i8*]* @doOptRefid.names, i64 0, i64 0), i32 2)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  store i32 %15, i32* %18, align 4
  br label %19

19:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32 @optionEnumerationVal(i32*, %struct.TYPE_6__*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
